Use records in CodecComponent. Fix hashmap usage for Group hits